# ura-chaos-arena

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  URACHAOS_FLYWHEEL_IDEAS.md  WARP.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
onchain/: Anchor.toml  Cargo.toml  README.md  build-optimized.ps1  build-optimized.sh
onchain/programs/ura_chaos_arena/: Cargo.toml
onchain/programs/ura_chaos_arena/src/: lib.rs
scripts/: keeper.ts
src/: main.tsx
src/chain/: arena.ts
src/chain/idl/: ura_chaos_arena.json
src/styles/: index.css
src/ui/: App.tsx
src/utils/: playerProgress.ts
src/wallet/: WalletContextProvider.tsx
