[workspace]
members = [
  "programs/ura_chaos_arena"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.29.0"

[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Enable link-time optimization
codegen-units = 1         # Single codegen unit for better optimization
panic = "abort"           # Smaller panic handling
strip = true             # Strip debug symbols

[profile.dev]
opt-level = 1
